alerts is fully good

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -100,3 +100,12 @@
     @apply text-base;
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
